<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RegisterConfirmation">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="163dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/register_time"
        android:textAlignment="textStart"
        android:textColor="@color/black_time"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="54dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/register_text"
        android:textColor="@color/register_gray_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/background_buttons_edit_text_gray"
        android:ems="10"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/register_label_black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextNumber1"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:background="@drawable/background_buttons_edit_text_gray"
        android:ems="10"
        android:inputType="number"
        android:maxLength="1"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:textColor="@color/register_label_black"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber2"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:background="@drawable/background_buttons_edit_text_gray"
        android:ems="10"
        android:inputType="number"
        android:maxLength="1"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:textColor="@color/register_label_black"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber1"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber3"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber1"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber1" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:background="@drawable/background_buttons_edit_text_gray"
        android:ems="10"
        android:inputType="number"
        android:maxLength="1"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:textColor="@color/register_label_black"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber2"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber2" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_buttons_main"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/register_button_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="209dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/register_back_text"
        android:textAlignment="center"
        android:textColor="@color/my_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>